; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_symbols.c_UnloadSymbols.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_symbols.c_UnloadSymbols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ulNumSymbolsLoaded = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"freeing [%u] %x\0A\00", align 1
@apSymbols = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UnloadSymbols() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 (...) @ENTER_FUNC()
  %3 = load i64, i64* @ulNumSymbolsLoaded, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %30

5:                                                ; preds = %0
  store i64 0, i64* %1, align 8
  br label %6

6:                                                ; preds = %26, %5
  %7 = load i64, i64* %1, align 8
  %8 = load i64, i64* @ulNumSymbolsLoaded, align 8
  %9 = icmp ult i64 %7, %8
  br i1 %9, label %10, label %29

10:                                               ; preds = %6
  %11 = load i64, i64* %1, align 8
  %12 = load i32**, i32*** @apSymbols, align 8
  %13 = load i64, i64* %1, align 8
  %14 = getelementptr inbounds i32*, i32** %12, i64 %13
  %15 = load i32*, i32** %14, align 8
  %16 = ptrtoint i32* %15 to i32
  %17 = call i32 @DPRINT(i32 %16)
  %18 = load i32**, i32*** @apSymbols, align 8
  %19 = load i64, i64* %1, align 8
  %20 = getelementptr inbounds i32*, i32** %18, i64 %19
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @PICE_free(i32* %21)
  %23 = load i32**, i32*** @apSymbols, align 8
  %24 = load i64, i64* %1, align 8
  %25 = getelementptr inbounds i32*, i32** %23, i64 %24
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %10
  %27 = load i64, i64* %1, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %1, align 8
  br label %6

29:                                               ; preds = %6
  store i64 0, i64* @ulNumSymbolsLoaded, align 8
  br label %30

30:                                               ; preds = %29, %0
  %31 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i32 @PICE_free(i32*) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
